--- a/src/app/allModules/registration/vendor-registration/vendor-registration.component.scss
+++ b/src/app/allModules/registration/vendor-registration/vendor-registration.component.scss
@@ -52,7 +52,6 @@
       //   }
     }
   }
-
   .borderRight1 {
     border-left: 1px solid black;
     border-radius: 1px;
@@ -138,10 +137,15 @@
   }
   .round {
     @extend .roundCommon;
-    background-color: white;
+    // background-color: white;
     // rgb(187, 185, 185)
     border: 2px solid gray;
     cursor: pointer !important;
+  }
+  .round1 {
+    @extend .roundCommon;
+    background-color: #2ecc71;
+    border: 2px solid #2ecc71;
   }
   .vertical-line {
     width: 3px;
@@ -160,11 +164,6 @@
   }
   .borderRightClass {
     border-right: 1px solid #dce1e9;
-  }
-  .round1 {
-    @extend .roundCommon;
-    background-color: #2ecc71;
-    border: 2px solid #2ecc71;
   }
   .highLight {
     // background: lightgray;
@@ -288,7 +287,6 @@
     background-color: white;
     color: #efb577;
   }
-
   .roundCommon {
     height: 20px;
     width: 20px;
@@ -296,7 +294,6 @@
     border-width: 3px;
     border-style: solid;
   }
-
   .round {
     @extend .roundCommon;
     background-color: white;
