index, dashboard and registration changes

--- a/src/app/allModules/approval/vendor-approval/vendor-approval.component.html
+++ b/src/app/allModules/approval/vendor-approval/vendor-approval.component.html
@@ -301,7 +301,7 @@
                   </ng-container> -->
 
                   <tr mat-header-row *matHeaderRowDef="identificationDisplayedColumns;sticky: true"></tr>
-                  <tr mat-row *matRowDef="let row; columns: identificationDisplayedColumns;" matRipple
+                  <tr mat-row *matRowDef="let row; columns: identificationDisplayedColumns;"
                     style=" cursor: pointer;">
                   </tr>
                 </table>
@@ -437,7 +437,7 @@
                     </ng-container> -->
 
                     <tr mat-header-row *matHeaderRowDef="bankDetailsDisplayedColumns;sticky: true"></tr>
-                    <tr mat-row *matRowDef="let row; columns: bankDetailsDisplayedColumns;" matRipple
+                    <tr mat-row *matRowDef="let row; columns: bankDetailsDisplayedColumns;"
                       style=" cursor: pointer;">
                     </tr>
                   </table>
@@ -558,7 +558,7 @@
                   </ng-container> -->
 
                   <tr mat-header-row *matHeaderRowDef="contactDisplayedColumns;sticky: true"></tr>
-                  <tr mat-row *matRowDef="let row; columns: contactDisplayedColumns;" matRipple
+                  <tr mat-row *matRowDef="let row; columns: contactDisplayedColumns;"
                     style=" cursor: pointer;">
                   </tr>
                 </table>
@@ -663,7 +663,7 @@
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="activityLogDisplayedColumns;sticky: true"></tr>
-                  <tr mat-row *matRowDef="let row; columns: activityLogDisplayedColumns;" matRipple
+                  <tr mat-row *matRowDef="let row; columns: activityLogDisplayedColumns;"
                     style=" cursor: pointer;">
                   </tr>
                 </table>
