--- a/src/app/allModules/registration/vendor-registration/vendor-registration.component.scss
+++ b/src/app/allModules/registration/vendor-registration/vendor-registration.component.scss
@@ -438,4 +438,10 @@
     margin-bottom: 0px;
     z-index: 100;
   }
+  .ValidityError{
+    color: #f44336;
+    font-size: 12px;
+    margin-top: -16px;
+    margin-left: 40px;
+  }
 }
