--- a/src/app/allModules/pages/company-details/company-details.component.html
+++ b/src/app/allModules/pages/company-details/company-details.component.html
@@ -307,8 +307,7 @@
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="identificationDisplayedColumns;sticky: true"></tr>
-                  <tr mat-row *matRowDef="let row; columns: identificationDisplayedColumns;" matRipple
-                    style=" cursor: pointer;">
+                  <tr mat-row *matRowDef="let row; columns: identificationDisplayedColumns;" style=" cursor: pointer;">
                   </tr>
                 </table>
                 <div flex *ngIf="IdentificationsByVOB?.length">
@@ -456,8 +455,7 @@
                     </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="bankDetailsDisplayedColumns;sticky: true"></tr>
-                    <tr mat-row *matRowDef="let row; columns: bankDetailsDisplayedColumns;" matRipple
-                      style=" cursor: pointer;">
+                    <tr mat-row *matRowDef="let row; columns: bankDetailsDisplayedColumns;" style=" cursor: pointer;">
                     </tr>
                   </table>
                 </div>
@@ -578,8 +576,7 @@
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="contactDisplayedColumns;sticky: true"></tr>
-                  <tr mat-row *matRowDef="let row; columns: contactDisplayedColumns;" matRipple
-                    style=" cursor: pointer;">
+                  <tr mat-row *matRowDef="let row; columns: contactDisplayedColumns;" style=" cursor: pointer;">
                   </tr>
                 </table>
                 <div flex *ngIf="ContactsByVOB?.length">
@@ -683,7 +680,7 @@
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="activityLogDisplayedColumns;sticky: true"></tr>
-                  <tr mat-row *matRowDef="let row; columns: activityLogDisplayedColumns;" matRipple
+                  <tr mat-row *matRowDef="let row; columns: activityLogDisplayedColumns;"
                     style=" cursor: pointer;">
                   </tr>
                 </table>
