--- a/src/app/allModules/pages/dashboard/dashboard.component.html
+++ b/src/app/allModules/pages/dashboard/dashboard.component.html
@@ -64,8 +64,7 @@
         </div>
       </div>
       <div fxFlex fxLayout="column">
-        <table *ngIf="AllVendorOnBoardings?.length" class="table" mat-table [dataSource]="VendorOnBoardingsDataSource"
-          matSort>
+        <table class="table" mat-table [dataSource]="VendorOnBoardingsDataSource" matSort>
 
           <ng-container matColumnDef="Name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
@@ -179,18 +178,18 @@
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="VendorOnBoardingsDisplayedColumns;sticky: true"></tr>
-          <tr mat-row *matRowDef="let row; columns: VendorOnBoardingsDisplayedColumns;let even=even" matRipple
+          <tr mat-row *matRowDef="let row; columns: VendorOnBoardingsDisplayedColumns;let even=even"
             style=" cursor: pointer;">
           </tr>
         </table>
-        <div flex>
-          <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
-          </mat-paginator>
-        </div>
         <div flex *ngIf="!AllVendorOnBoardings?.length">
           <mat-icon svgIcon="infoIcon" style="color: #1b56ca;margin-top: 10px;margin-left: 70px">
           </mat-icon>
-          <span style="margin-left: 10px;">The table does not contain any data</span>
+          <span style="margin-left: 10px;">The table does not contain any records</span>
+        </div>
+        <div flex>
+          <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
+          </mat-paginator>
         </div>
       </div>
     </div>
